--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,11 @@ dependencies {
 	testCompileOnly 'org.projectlombok:lombok:1.18.24'
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
 
+	//MongoDb
+	// https://mvnrepository.com/artifact/org.springframework.data/spring-data-mongodb
+	implementation group: 'org.springframework.data', name: 'spring-data-mongodb', version: '3.4.1'
+
+
 }
 
 tasks.named('test') {
